--- a/template/table.html.erb
+++ b/template/table.html.erb
@@ -1,5 +1,5 @@
 <table id="projects">
-      <% @projects.each do |project| %>
+      <% projects.each do |project| %>
       <tr>
             <td class="projectName" style="width: 265px"><%= project["name"] %></td>
 
